--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="txt_btn_setting">Go to Setting</string>
     <string name="txt_cancel_button">Cancel</string>
     <string name="txt_ok_button">OK</string>
+    <string name="txt_title_dialogfinger">Fingerprint</string>
 
 </resources>
